--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     ]
   },
   "devDependencies": {
-    "antd": "^3.20.0"
+    "antd": "^3.20.0",
+    "normalize.css": "^8.0.1",
+    "react-router-dom": "^5.0.1"
   }
 }
